Fix links for viewing on filesystem instead of server

--- a/blog_post_form.html
+++ b/blog_post_form.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="layout.css" />
+        <link rel="stylesheet" href="./layout.css" />
         <title>New Post | Isaac's Blog</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -28,9 +28,9 @@
                 <h1>Isaac's Blog</h1>
             </a>
             <nav>
-                <a href="/blog_layout.html">Home</a>
-                <a href="/table_of_contents.html">Posts</a>
-                <a href="/blog_post_form.html">New Post</a>
+                <a href="./blog_layout.html">Home</a>
+                <a href="./table_of_contents.html">Posts</a>
+                <a href="./blog_post_form.html">New Post</a>
             </nav>
         </header>
 
