--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="layout.css" />
+        <link rel="stylesheet" href="./layout.css" />
         <title>Posts | Isaac's Blog</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
@@ -10,13 +10,13 @@
                 <h1>Isaac's Blog</h1>
             </a>
             <nav>
-                <a href="/blog_layout.html">Home</a>
-                <a href="/table_of_contents.html">Posts</a>
-                <a href="/blog_post_form.html">New Post</a>
+                <a href="./blog_layout.html">Home</a>
+                <a href="./table_of_contents.html">Posts</a>
+                <a href="./blog_post_form.html">New Post</a>
             </nav>
         </header>
         <main>
-            <a href="/blog_post_form.html"><button>+ New Post</button></a>
+            <a href="./blog_post_form.html"><button>+ New Post</button></a>
             <table>
                 <caption>
                     <h2>Posts</h2>
@@ -32,7 +32,7 @@
                     <tr>
                         <td>17 Sep, 2024</td>
                         <td>
-                            <a href="/posts/multimedia_blog_post.html"
+                            <a href="./posts/multimedia_blog_post.html"
                                 >Digital Album Collection</a
                             >
                         </td>
@@ -41,7 +41,7 @@
                     <tr>
                         <td>9 Aug, 2024</td>
                         <td>
-                            <a href="/posts/wordclouds.html"
+                            <a href="./posts/wordclouds.html"
                                 >Creating Wordclouds</a
                             >
                         </td>
