--- a/blog_post_form.html
+++ b/blog_post_form.html
@@ -50,7 +50,7 @@
                     <input id="post-author" type="text" placeholder="Author" />
                 </div>
                 <div class="input-container">
-                    <label for="post-content">Author</label>
+                    <label for="post-content">Content</label>
                     <textarea
                         id="post-content"
                         rows="12"
